# wabam

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: customs.rs  encode.rs  functions.rs  instructions.rs  interface.rs  lib.rs  tables.rs  val_types.rs
src/functions/: instructions.rs
src/functions/instructions/: instr_macro.rs
src/tests/: fac.wasm  hello.wasm
