[package]
name = "wabam"
description = "WebAssembly Builder and Assembler of Modules: WABAM"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Cyborus04/wabam"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "assemble", "disassemble"]
exclude = ["tests/*",]

[dependencies]
